fix: format image title spacing

--- a/sass/modules/post-card/_post-details.scss
+++ b/sass/modules/post-card/_post-details.scss
@@ -26,7 +26,8 @@
       width: 100%;
       height: 522px;
     }
-    &.format-gallery{
+    &.format-gallery,
+    &.format-image {
       .post-meta{
         margin-top: 20px;
       }
